fix: add missing margin auto to .center class in styles.css

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ input {
     margin-bottom: 2.5%;
 }
 .center {
+  margin: auto;
   width: 60%;
   padding: 15%;
   height: 15vh;
